--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,7 +1,7 @@
 /*GLOBAL*/
-@import "./fontawesome/scss/fontawesome.scss";
-@import "./fontawesome/scss/regular.scss";
-@import "./fontawesome/scss/solid.scss";
+@import './fontawesome/scss/fontawesome';
+@import './fontawesome/scss/regular';
+@import './fontawesome/scss/solid';
 
 h1,
 h2,
