--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -23,11 +23,13 @@
           <a class="nav-link" href="/classrooms"><i class="fas fa-chalkboard-teacher"></i> Aulas</a>
         </li>
       </ul>
-      <a class="nav-link mr-sm-2" href="/profile"><i class="fas fa-user-circle"></i></a>
-      <a class="nav-link mr-sm-2" href="/messages"><i class="fas fa-envelope"></i></a>
-      <a class="nav-link mr-sm-2" href="/notifications"><i class="fas fa-bell"></i></a>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="soonTM" aria-label="Search">
+      <a *ngIf="identified === false" class="nav-link mr-sm-2" href="/login"><i class="fas fa-sign-in-alt"></i> Inicia sesión</a>
+      <a *ngIf="identified === false" class="nav-link mr-sm-2" href="/register"><i class="fas fa-address-card"></i> Registrate</a>
+      <a *ngIf="identified === true" class="nav-link mr-sm-2" href="/profile"><i class="fas fa-user-circle"></i></a>
+      <a *ngIf="identified === true" class="nav-link mr-sm-2" href="/messages"><i class="fas fa-envelope"></i></a>
+      <a *ngIf="identified === true" class="nav-link mr-sm-2" href="/notifications"><i class="fas fa-bell"></i></a>
+      <form *ngIf="identified === true" class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Usuarios, Grupos" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
       </form>
     </div>
